reflect the app's properties in configs

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "toronto",
-  "version": "1.0.0",
-  "description": "toronto: An Ionic project",
+  "name": "Hall",
+  "version": "0.0.1",
+  "description": "An app for the fine citizens of Toronto",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^0.7.1",
