--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hall",
+  "name": "Toronto City Hall",
   "version": "0.0.1",
   "description": "An app for the fine citizens of Toronto",
   "dependencies": {
