--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.0.0-beta.14"
   },
   "dependencies": {
-    "angular-material": "~0.8.3"
+    "angular-material": "~0.8.3",
+    "roboto-fontface": "~0.4.0"
   }
 }
