--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,10 @@
     "ionic": "driftyco/ionic-bower#1.0.0-beta.14"
   },
   "dependencies": {
-    "angular-material": "~0.8.3",
+    "angular-material": "v0.9.0-rc2",
     "roboto-fontface": "~0.4.0"
+  },
+  "resolutions": {
+    "angular-material": "v0.9.0-rc2"
   }
 }
