--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,9 @@
 {
   "name": "toronto-city-hall",
   "private": "true",
-  "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.14"
-  },
   "dependencies": {
     "angular-material": "v0.9.0-rc2",
-    "roboto-fontface": "~0.4.0"
-  },
-  "resolutions": {
-    "angular-material": "v0.9.0-rc2"
+    "roboto-fontface": "~0.4.0",
+    "angular": "1.3.15"
   }
 }
