--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "angular-material": "v0.9.0-rc2",
     "roboto-fontface": "~0.4.0",
-    "angular": "1.3.15"
+    "angular": "1.3.15",
+    "angular-ui-router": "~0.2.14",
+    "angular-animate": "~1.3.15"
   }
 }
