--- a/bower.json
+++ b/bower.json
@@ -7,5 +7,8 @@
     "angular": "1.3.15",
     "angular-ui-router": "~0.2.14",
     "angular-animate": "~1.3.15"
+  },
+  "resolutions": {
+    "angular": "1.3.15"
   }
 }
