--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.0.1",
   "description": "An app for the fine citizens of Toronto",
   "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-sass": "^0.7.1",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp": "^3.5",
+    "gulp-sass": "^2.1",
+    "gulp-concat": "^2.2",
+    "gulp-minify-css": "^1.0",
+    "gulp-rename": "^1.2"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "bower": "^1.3",
+    "cordova": "^5.4",
+    "gulp-util": "^3.0",
+    "shelljs": "^0.3"
+  },
+  "engines": {
+    "node": "5.3.0"
   },
   "cordovaPlugins": []
 }
