--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
   "engines": {
     "node": "5.3.0"
   },
-  "cordovaPlugins": []
+  "cordovaPlugins": [
+    "cordova-plugin-whitelist@1"
+  ]
 }
