--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "roboto-fontface": "~0.4.0",
     "angular": "1.3.15",
     "angular-ui-router": "~0.2.14",
-    "angular-animate": "~1.3.15"
+    "angular-animate": "~1.3.15",
+    "swagger-angular-client": "~0.1.12"
   },
   "resolutions": {
     "angular": "1.3.15"
