--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "bower": "^1.3",
     "cordova": "^5.4",
+    "fetch-swagger-schema": "^0.1.2",
     "gulp-util": "^3.0",
     "shelljs": "^0.3"
   },
