--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "An app for the fine citizens of Toronto",
   "dependencies": {
+    "cordova": "^5.4",
     "gulp": "^3.5",
     "gulp-sass": "^2.1",
     "gulp-concat": "^2.2",
@@ -11,13 +12,15 @@
   },
   "devDependencies": {
     "bower": "^1.3",
-    "cordova": "^5.4",
     "fetch-swagger-schema": "^0.1.2",
     "gulp-util": "^3.0",
     "shelljs": "^0.3"
   },
   "engines": {
     "node": "5.3.0"
+  },
+  "scripts": {
+    "start": "cordova serve $PORT"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist@1"
