--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "gulp-sass": "^2.1",
     "gulp-concat": "^2.2",
     "gulp-minify-css": "^1.0",
-    "gulp-rename": "^1.2"
-  },
-  "devDependencies": {
+    "gulp-rename": "^1.2",
     "bower": "^1.3",
     "fetch-swagger-schema": "^0.1.2",
     "gulp-util": "^3.0",
