--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "node": "5.3.0"
   },
   "scripts": {
-    "install": "node_modules/.bin/cordova platform add browser",
-    "postinstall": "node_modules/.bin/gulp install && node_modules/.bin/gulp sass",
-    "start": "node_modules/.bin/cordova serve $PORT"
+    "install": "cordova platform add browser",
+    "postinstall": "gulp install && gulp sass",
+    "start": "cordova serve $PORT"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist@1"
